[AB-xxx] actively restricting length of slash command parameters if a validator is configured for the parameter (more easy solution than a separate one)